feat: Use permission to control command
Signed-off-by: KunoiSayami <i@leanhe.dev>

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -13,3 +13,10 @@ commands:
   stop_task:
     description: "Stop airdrop task"
     usage: "/<command> <id>"
+permissions:
+  dropingot.*:
+    description: "Allow you use all drop ingot plugin command"
+    children:
+      - dropingot.control
+  dropingot.control:
+    description: "Control airdrop start and stop"
