--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>dev.leanhe.minecraft</groupId>
     <artifactId>DropIngotPlugin</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1-beta</version>
     <packaging>jar</packaging>
 
     <name>DropIngotPlugin</name>
