--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>dev.leanhe.minecraft</groupId>
     <artifactId>DropIngotPlugin</artifactId>
-    <version>1.0.1-beta</version>
+    <version>1.1.0</version>
     <packaging>jar</packaging>
 
     <name>DropIngotPlugin</name>
@@ -25,8 +25,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
+                    <source>11</source>
+                    <target>11</target>
                 </configuration>
             </plugin>
             <plugin>
