--- a/pom.xml
+++ b/pom.xml
@@ -6,17 +6,17 @@
 
     <groupId>dev.leanhe.minecraft</groupId>
     <artifactId>DropIngotPlugin</artifactId>
-    <version>2.1.0</version>
+    <version>2.2.0</version>
     <packaging>jar</packaging>
 
     <name>DropIngotPlugin</name>
 
-    <description>A simple plugin drop ingot.</description>
+    <description>A simple plugin drop ingot or experience orb.</description>
     <properties>
-        <java.version>1.8</java.version>
+        <java.version>1.17</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-    <url>https://leanhe.dev</url>
+    <url>https://github.com/KunoiSayami</url>
 
     <build>
         <plugins>
@@ -69,7 +69,7 @@
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
-            <version>1.17.1-R0.1-SNAPSHOT</version>
+            <version>1.18.2-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
