--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>dev.leanhe.minecraft</groupId>
     <artifactId>DropIngotPlugin</artifactId>
-    <version>2.2.0</version>
+    <version>3.0.0-Alpha</version>
     <packaging>jar</packaging>
 
     <name>DropIngotPlugin</name>
@@ -25,8 +25,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>11</source>
-                    <target>11</target>
+                    <source>15</source>
+                    <target>15</target>
                 </configuration>
             </plugin>
             <plugin>
